syntax = "proto3";

package rpc.v1;

option go_package = "github.com/lightsparkdev/spark/proto/lrc20";
import "google/protobuf/empty.proto";
import "validate/validate.proto";
import "spark.proto";

service SparkService {
  rpc SendSparkSignature(SendSparkSignatureRequest) returns (google.protobuf.Empty);
  rpc ListSparkTxs(ListSparkTxsRequest) returns (ListSparkTxsResponse);
  rpc GetSparkTx(GetSparkTxRequest) returns (GetSparkTxResponse);
  rpc VerifySparkTx(VerifySparkTxRequest) returns (google.protobuf.Empty);
  rpc FreezeTokens(spark.FreezeTokensRequest) returns (spark.FreezeTokensResponse);
  rpc ListWithdrawnOutputs(ListWithdrawnOutputsRequest) returns (ListWithdrawnOutputsResponse);  
}

message SendSparkSignatureRequest {
  spark.TokenTransaction final_token_transaction = 1;

  repeated spark.OperatorSpecificOwnerSignature operator_specific_signatures = 2;
  SparkOperatorSignatureData operator_signature_data = 3;

  repeated spark.RevocationSecretWithIndex revocation_secrets = 4;
}

message SparkOperatorSignatureData {
  bytes spark_operator_signature = 1 [(validate.rules).bytes.min_len = 64, (validate.rules).bytes.max_len = 73];
  bytes operator_identity_public_key = 2 [(validate.rules).bytes.len = 33];
}

message SparkSignatureOutputData {
  uint32 spent_output_index = 1;
  optional bytes revocation_private_key = 2;
}

message GetSparkTxRequest {
  bytes final_token_transaction_hash = 1;
}

message VerifySparkTxRequest {
  spark.TokenTransaction final_token_transaction = 1;
}

message ListSparkTxsRequest {
  optional bytes page_token = 1;
  optional uint32 page_size = 2;
}

message ListSparkTxsResponse {
  repeated TokenTransactionResponse token_transactions = 1;
  optional bytes next_page_token = 2;
}

message GetSparkTxResponse {
  spark.TokenTransaction final_token_transaction = 1;
}

message TokenTransactionResponse {
  bool finalized = 1;
  spark.TokenTransaction final_token_transaction = 2;
}

message ListWithdrawnOutputsRequest {
  optional bytes blockhash = 1;
  optional string page_token = 2;
  optional uint32 page_size = 3;
}

message ListWithdrawnOutputsResponse {
  repeated spark.TokenOutput outputs = 1;
  optional string next_page_token = 2;
}
